--- a/docs/03.administer/20.backups/index.mdx
+++ b/docs/03.administer/20.backups/index.mdx
@@ -78,7 +78,7 @@ After creating backups, it is possible to list and inspect them using the corres
   </TabItem>
   <TabItem value="sftp" label="With a SFTP client">
 
-Currently, the most accessible way to download big archives is to use the program FileZilla as explained in [this page](/filezilla).
+Currently, the most accessible way to download big archives is to use the program FileZilla as explained in [this page](/administer/tutorials/filezilla).
 
 By default, backups are stored in `/home/yunohost.backup/archives/`.
 
@@ -87,7 +87,7 @@ By default, backups are stored in `/home/yunohost.backup/archives/`.
 
 The `yunohost backup list` and `yunohost backup info <archive_name>` commands provide information about the names and sizes of backups.
 
-It is possible to use `scp` (a program based on [`ssh`](/ssh)) to copy files between two machines via the command line. So, from a GNU/Linux machine, you can use the following command to download an archive:
+It is possible to use `scp` (a program based on [`ssh`](/administer/admin_guide/command_line)) to copy files between two machines via the command line. So, from a GNU/Linux machine, you can use the following command to download an archive:
 
 ```bash
 scp admin@your.domain.tld:/home/yunohost.backup/archives/<archive_name>.tar ./
@@ -108,7 +108,7 @@ Don't forget to store your backup in a different place to your server.
 :::
 
 :::info
-If you want, you can connect an external disk to your server so that the archives arrive directly on it. See this guide to [Adding external storage to your server](/external_storage)
+If you want, you can connect an external disk to your server so that the archives arrive directly on it. See this guide to [Adding external storage to your server](/administer/tutorials/external_storage)
 :::
 
 ### Testing
