--- a/docs/03.administer/45.tutorials/25.external_storage.mdx
+++ b/docs/03.administer/45.tutorials/25.external_storage.mdx
@@ -23,7 +23,7 @@ The method presented here will first mount the single partition of the hard disk
 
 - Have some time at a moment when your server users can accept a shutdown. The steps to be performed, even if they are relatively simple, can sometimes seem technical and require in any case **to take your time**.
 
-- Know how to connect as root on your system, for example via [SSH](/ssh). (Note: while logged in as `admin`, you can root with `sudo su`)
+- Know how to connect as root on your system, for example via [SSH](/administer/admin_guide/command_line). (Note: while logged in as `admin`, you can root with `sudo su`)
 
 - Know the basic commands `cd`, `ls`, `mkdir`, `rm`.
 
