--- a/docs/05.community/90.terms_of_services.mdx
+++ b/docs/05.community/90.terms_of_services.mdx
@@ -380,7 +380,7 @@ As with any web service, a technical log exists recording the IP and User Agent 
 
 #### Service address
 
-`forum.yunohost.org` and chats listed on [the documentation](/chat_rooms).
+`forum.yunohost.org` and chats listed on [the documentation](/community/chat_rooms).
 
 #### Asking for help
 
