--- a/docs/03.administer/15.admin_guide/15.command_line.mdx
+++ b/docs/03.administer/15.admin_guide/15.command_line.mdx
@@ -38,7 +38,7 @@ If you connected with the administration account and would like to become `root`
 If you are **installing at home** (e.g. on a Raspberry Pi or OLinuXino or old computer):
 
 - you should be able to connect to your server using `yunohost.local` (or `yunohost-2.local`, depending on how many servers are on your network).
-- if `yunohost.local` and the like do not work, your need to [find out the local IP of the server](/finding_the_local_ip).
+- if `yunohost.local` and the like do not work, your need to [find out the local IP of the server](/install/post_install/finding_the_local_ip).
 - if you installed a server at home but are attempting to connect from outside your local network, make sure port 22 is correctly forwarded to your server.
 
 If your server is a remote server (VPS), your provider should have communicated you the IP address of the machine
@@ -66,7 +66,7 @@ ssh username@yunohost.local
 ssh -p 2244 username@your.domain.tld
 ```
 :::note
-`fail2ban` will ban your IP for 10 minutes if you perform 10 failed login attempts. If you need to unban the IP, have a look at the page about [Fail2Ban](/fail2ban)
+`fail2ban` will ban your IP for 10 minutes if you perform 10 failed login attempts. If you need to unban the IP, have a look at the page about [Fail2Ban](/administer/troubleshooting/fail2ban)
 :::
 
 ## Which other users may connect to the server?
