--- a/docs/03.administer/45.tutorials/45.certificate_custom.md
+++ b/docs/03.administer/45.tutorials/45.certificate_custom.md
@@ -33,7 +33,7 @@ pscp -P 22 CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
 pscp -P 22 KEY.key admin@DOMAIN.TLD:ssl.key
 ```
 
-As soon as the files are on the server, the rest of the work will be done on it. In [ssh](/ssh) or locally.
+As soon as the files are on the server, the rest of the work will be done on it. In [ssh](/administer/admin_guide/command_line) or locally.
 First, create a folder to store the obtained certificates.
 
 ```bash
