init some french translations

--- a/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/15.try_yunohost.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/15.try_yunohost.mdx
@@ -1,6 +1,6 @@
 ---
-title: Try YunoHost
-description: A demo server
+title: Essayer YunoHost
+description: Un serveur de démonstration
 routes:
   default: '/try'
 ---
@@ -10,35 +10,35 @@ import YunoHostDocsCardHeading from '@site/src/components/YunoHostDocsCard/YunoH
 
 
 
-# Try YunoHost on a demo server
+# Essayer YunoHost sur un serveur de démonstration
 
 :::caution
-This demo server could be down from time to time, but at least you can test and that's really cool :)
+Cette démo peut cesser de fonctionner de temps en temps, mais au moins vous pouvez tester, et ça c’est vraiment chouette :)
 :::
 
 <div style={{display: "flex"}} >
 <YunoHostDocsCard>
   <YunoHostDocsCardHeading url="https://demo.yunohost.org/?target=_blank&classes=btn,btn-lg,btn-success" color="#30ae40"> {
-  } <FAIcon icon='fa-user'/> User interface {
+  } <FAIcon icon='fa-user'/> Interface utilisateur {
   } </YunoHostDocsCardHeading>
 
-  username: `demo`
+  Utilisateur : `demo`
 
-  password: `demo`
+  Mot de passe : `demo`
 </YunoHostDocsCard>
 
 <YunoHostDocsCard>
   <YunoHostDocsCardHeading url="https://demo.yunohost.org/yunohost/admin/?target=_blank&classes=btn,btn-lg,btn-primary" color="#1267da"> {
-  } <FAIcon icon='fa-cog'/> Administration interface {
+  } <FAIcon icon='fa-cog'/> Interface d’administration {
   } </YunoHostDocsCardHeading>
 
-  username: `demo`
+  Utilisateur : `demo`
 
-  password: `demo`
+  Mot de passe : `demo`
 
 </YunoHostDocsCard>
 </div>
 
 :::info
-**Demo server gracefully provided by [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon="fa-heart" style={{color: "green"}}/>**
+**Le serveur de démo est fourni généreusement par [Gitoyen](https://www.gitoyen.net?target=_blank) <FAIcon icon="fa-heart" style={{color: "green"}}/>**
 :::
