--- a/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
@@ -1,59 +1,56 @@
 ---
-title: What is YunoHost?
+title: Qu’est-ce que YunoHost?
 description: " "
 ---
 
 <img src={require('/img/YunoHost_logo_vertical.png').default} alt="YunoHost logo" id="ynhlogo" style={{display: "block", textAlign: "center", margin: "auto"}}/>
 
-YunoHost is an **operating system** aiming to simplify **server administration** and therefore democratize [self-hosting](/overview/self_hosting) while making sure it stays reliable, secure, ethical and lightweight. It is a copylefted libre software project maintained exclusively by volunteers. Technically, it can be seen as a distribution based on [Debian GNU/Linux](https://debian.org) and can be installed on [many kinds of hardware](/install).
+YunoHost est un **système d’exploitation** qui vise à simplifier autant que possible **l'administration d'un serveur** pour ainsi démocratiser [l’auto-hébergement](/overview/self_hosting) tout en restant fiable, sécurisé, éthique et léger. C'est un projet de logiciel libre maintenu exclusivement par des bénévoles. Techniquement, il peut être vu comme une distribution basée sur [Debian GNU/Linux](https://debian.org) et peut s'installer sur [de nombreux types de matériel](/install).
 
-## Features
+## Fonctionnalités
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 export function SmallInline({url, alt}) {
   return (<img src={useBaseUrl(url)} width="32" style={{verticalAlign: "middle", margin: "5px"}} alt={alt}/>);
 }
 
-- &#8203;<SmallInline url='/img/icon-debian.png' alt="debian logo"/> Based on Debian, for a trustworthy & familiar base;
-- &#8203;<SmallInline url='/img/icon-tools.png' alt="tools logo"/> Administer your server through a **friendly web interface** as well as a handy CLI;
-- &#8203;<SmallInline url='/img/icon-package.png' alt="package logo"/> Deploy **apps in just a few clicks** from [our more than 500 apps catalog](https://apps.yunohost.org)!;
-- &#8203;<SmallInline url='/img/icon-users.png' alt="users logo"/> Manage **users** <small>(based on LDAP)</small>;
-- &#8203;<SmallInline url='/img/icon-globe.png' alt="globe logo"/> Manage **domain names**;
-- &#8203;<SmallInline url='/img/icon-medic.png' alt="medic logo"/> Create and restore **backups**;
-- &#8203;<SmallInline url='/img/icon-door.png' alt="door logo"/> Connect to all apps simultaneously through the **user portal** <small>(NGINX, SSOwat)</small>;
-- &#8203;<SmallInline url='/img/icon-mail.png' alt="mail logo"/> Includes a **full e-mail stack** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-- &#8203;<SmallInline url='/img/icon-messaging.png' alt="messaging logo"/>... as well as **an instant messaging server** <small>(XMPP)</small>
-- &#8203;<SmallInline url='/img/icon-lock.png' alt="lock logo"/> Manages **SSL certificates** <small>(based on Let's Encrypt)</small>;
-- &#8203;<SmallInline url='/img/icon-shield.png' alt="shield logo"/>... and **security systems** <small>(`fail2ban`, `yunohost-firewall`)</small>.
+- &#8203;<SmallInline url='image://icon-debian.png' alt="debian logo"/> basé sur Debian, pour une base de confiance et familière;
+- &#8203;<SmallInline url='image://icon-tools.png' alt="tools logo"/> administration via une **interface web simple et claire** ou en ligne de commande;
+- &#8203;<SmallInline url='image://icon-package.png' alt="package logo"/> déployez des **applications en quelques clics**, parmi [un catalogue de plus de 500](https://apps.yunohost.org) !;
+- &#8203;<SmallInline url='image://icon-users.png' alt="users logo"/> ajoutez des **utilisateurs** <small>(gérés via un annuaire LDAP)</small>;
+- &#8203;<SmallInline url='image://icon-globe.png' alt="globe logo"/> gérez des **noms de domaine**;
+- &#8203;<SmallInline url='image://icon-medic.png' alt="medic logo"/> créez et restaurez des **sauvegardes**;
+- &#8203;<SmallInline url='image://icon-door.png' alt="door logo"/> connexion simultanée à toutes les apps via un **portail utilisateur** <small>(nginx, SSOwat)</small>;
+- &#8203;<SmallInline url='image://icon-mail.png' alt="mail logo"/> fourni avec un **serveur mail complet** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
+  &#8203;<SmallInline url='image://icon-messaging.png' alt="messaging logo"/> ...ainsi qu’un **serveur de messagerie instantanée** <small>(XMPP)</small>;
+- &#8203;<SmallInline url='image://icon-lock.png' alt="lock logo"/> gère les **certificats SSL** <small>(basé sur Let's Encrypt)</small>;
+- &#8203;<SmallInline url='image://icon-shield.png' alt="shield logo"/> ... et des **systèmes de sécurité** <small>(`fail2ban`, `yunohost-firewall`)</small>.
 
-## Origin
+## Origine
 
-YunoHost was created in February 2012 after something like this:
+YunoHost est un projet né en février 2012 à la suite d’à peu près ça :
 
-> "Shit, I'm too lazy to reconfigure my mail server... Beudbeud, how were you able to get your little server running with LDAP?"
-> <small>*Kload, February 2012*</small>
+> « Merde, j’ai la flemme de me reconfigurer un serveur mail... Beudbeud, comment t’as fait pour configurer ton joli serveur sous LDAP ? »
+> <small>Kload, février 2012</small>
 
-All that was needed was an admin interface for Beudbeud's server to make something usable, so Kload decided to develop one. Finally, after automating several configs and packaging in some web apps, YunoHost v1 was finished.
+Il ne manquait en fait qu’une interface d’administration au serveur de Beudbeud pour en faire quelque chose d’exploitable, alors Kload a décidé de la développer. Finalement, après l’automatisation de quelques configurations et le packaging de quelques applications web, la première version de YunoHost était sortie.
 
-Noting the growing enthusiasm around YunoHost and around self-hosting in general, the original developers along with new contributors decided to start work on version 2, a more extensible, more powerful, more easy-to-use, and at that, one that makes a nice cup of fair-trade coffee for the elves of Lapland.
+Constatant l’engouement croissant autour de YunoHost et de l’auto-hébergement en général, les développeurs et les nouveaux contributeurs ont alors décidé de prendre le cap d’une version 2, plus accessible, plus extensible, plus puissante, et qui prépare du bon café commerce équitable pour les lutins de Laponie.
 
-The name **YunoHost** comes from the jargon "[Y U NO](https://knowyourmeme.com/memes/y-u-no-guy) Host". The [Internet meme](https://en.wikipedia.org/wiki/Internet_meme) should illustrate it:
+Le nom **YunoHost** vient de l’argot Internet anglais « [Y U NO](https://knowyourmeme.com/memes/y-u-no-guy) Host » signifiant approximativement « Pourquoi toi ne pas héberger ». Le [mème Internet](http://fr.wikipedia.org/wiki/M%C3%A8me_Internet) qui l’illustre est à peu près celui-ci :
+![Le mème en question, montrant un bonhomme au visage déformé par la frustation et questionnant « Y U NO Host »](image://dude_yunohost.jpg)
 
-<center>
-![The meme in question, showing a guy with a face bent in frustration and questioning "Y U NO Host"](/img/dude_yunohost.jpg)
-</center>
+## Qu’est-ce que YunoHost n’est pas ?
 
-## What YunoHost is not?
+Même si YunoHost est multi-domaine et multi-utilisateur, il reste **inapproprié pour un usage mutualisé**.
 
-Even if YunoHost can handle multiple domains and multiple users, it is **not meant to be a mutualized system**.
+Premièrement parce que le logiciel est trop jeune, donc non-testé et non-optimisé pour être mis en production pour des centaines d’utilisateurs en même temps. Et quand bien même, ce n’est pas le chemin que l’on souhaite faire suivre à YunoHost. La virtualisation se démocratise, et c’est une façon bien plus étanche et sécurisée de faire de la mutualisation.
 
-First, the software is too young, not tested at scale and thus probably not optimized well enough for hundreds of users at the same time. With that said, we do not want to lead the software in that direction. Virtualization democratizes, and its usage is recommended since it is a more watertight way to achieve mutualization than a "full-stack" system like YunoHost.
+Vous pouvez héberger vos amis, votre famille, votre association ou votre entreprise sans problème, mais vous devez **avoir confiance** en vos utilisateurs, et ils doivent de la même façon avoir confiance en vous. Si vous souhaitez tout de même fournir des services YunoHost à des inconnus, **un VPS entier par utilisateur** sera la meilleure solution.
 
-You can host your friends, your family and your company safely and with ease, but you must **trust your users**, and they must trust you above all. If you want to provide YunoHost services for unknown persons anyway, a full VPS per user will be just fine, and we believe a better way to go.
+## Logo
 
-## Artworks
-
-Black and white YunoHost PNG logo by ToZz (400 × 400 px). Licence: CC-BY-SA 4.0. Logos and other artwork are available in [the Artworks repository](https://github.com/YunoHost/yunohost-artwork).
+Logo YunoHost noir et blanc réalisé par ToZz (400 × 400 px). Licence: CC-BY-SA 4.0. Les logos et autres artwork sont disponibles dans le [répertoire Github](https://github.com/YunoHost/yunohost-artwork).
 
 <img src={require('/img/ynh_logo_black_300dpi.png').default} width="220" id="darklogo" style={{padding: "1rem"}}/>
 <img src={require('/img/ynh_logo_white_300dpi.png').default} width="220" id="whitelogo" style={{padding: "1rem"}}/>
