--- a/docs/03.administer/15.admin_guide/30.apps/30.apps.mdx
+++ b/docs/03.administer/15.admin_guide/30.apps/30.apps.mdx
@@ -22,7 +22,7 @@ The application catalog and its categories can be browsed directly from the weba
 </div>
 
 :::caution
-Be careful and stay reasonable on the number of installed applications. Each additional installation increases the attack surface and the risk of failure. Ideally, if you want to test, do it with another instance for example in [a virtual machine](/install/hardware:virtualbox).
+Be careful and stay reasonable on the number of installed applications. Each additional installation increases the attack surface and the risk of failure. Ideally, if you want to test, do it with another instance for example in [a virtual machine](/install/install_on/virtualbox).
 :::
 
 ## Installing an app
