--- a/docs/02.install/40.post_install/05.configuration.mdx
+++ b/docs/02.install/40.post_install/05.configuration.mdx
@@ -23,14 +23,14 @@ For a VPS, please use the public IP address instead of the local domain or addre
   <TabItem value="web" label="From the web interface">
 
     :::warning
-    During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/certificate).  For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
+    During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/administer/admin_guide/domains/certificate).  For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
     :::
 
     You should then land on this page:
     <Figure caption="Preview of the Web initial configuration page" src="/img/postinstall_web.png"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
-    You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/ssh).
+    You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/administer/admin_guide/command_line).
 
     <Figure caption="Preview of the command-line post-installation" src="/img/postinstall_cli.png"/>
   </TabItem>
@@ -60,15 +60,15 @@ If you want to create subdomains, do not forget to add them in the `hosts` file 
 This will be the domain used by your server's users to access the **authentication portal**. You can later add other domains, and change which one is the main domain if needed.
 
 - If you're new to self-hosting and do not already have a domain name, we recommend using a **.nohost.me** / **.noho.st** / **.ynh.fr** (e.g. `homersimpson.nohost.me`). Provided that it's not already taken, the domain will be configured automatically and you won't need any further configuration step. Please note that the downside is that you won't have full-control over the DNS configuration.
-- If you already own a domain name, you probably want to use it here. You will later need to configure DNS records as explained [here](/dns_config).
+- If you already own a domain name, you probably want to use it here. You will later need to configure DNS records as explained [here](/install/post_install/dns_config).
 
 :::tip
-Yes, you *have to* configure a domain name. If you don't have any domain name and don't want a **.nohost.me** / **.noho.st** / **.ynh.fr** either, you can set up a dummy domain such as `yolo.test` and tweak your **local** `/etc/hosts` file such that this dummy domain [points to the appropriate IP, as explained here](/dns_local_network).
+Yes, you *have to* configure a domain name. If you don't have any domain name and don't want a **.nohost.me** / **.noho.st** / **.ynh.fr** either, you can set up a dummy domain such as `yolo.test` and tweak your **local** `/etc/hosts` file such that this dummy domain [points to the appropriate IP, as explained here](/administer/tutorials/domains/dns_local_network).
 :::
 
 ### <FAIcon icon="fa-key"/> First user
 
-The first user is now created at this stage. You should pick a username and a reasonably complex password. (We cannot stress enough that the password should be **robust**!) This user will be added to the Admins group, and will therefore be able to access the user portal, the web admin interface, and connect [via **SSH**](/ssh) or [**SFTP**](/filezilla). Admins will also receive emails sent to `root@yourdomain.tld` and `admin@yourdomain.tld`: these emails may be used to send technical informations or alerts. You can later add additional users, which you can also add to the Admins group.
+The first user is now created at this stage. You should pick a username and a reasonably complex password. (We cannot stress enough that the password should be **robust**!) This user will be added to the Admins group, and will therefore be able to access the user portal, the web admin interface, and connect [via **SSH**](/administer/admin_guide/command_line) or [**SFTP**](/administer/tutorials/filezilla). Admins will also receive emails sent to `root@yourdomain.tld` and `admin@yourdomain.tld`: these emails may be used to send technical informations or alerts. You can later add additional users, which you can also add to the Admins group.
 
 This user replaces the old `admin` user, which some old documentation page may still refer to. In which case: just replace `admin` with your username.
 
@@ -79,7 +79,7 @@ Once the postinstall is done, you should be able to actually log in the web admi
 The diagnosis system is meant to provide an easy way to validate that all critical aspects of your server are properly configured - and guide you in how to fix issues. The diagnosis will run twice a day and send an alert if issues are detected.
 
 :::tip
-**Don't run away** ! The first time you run the diagnosis, it is quite expected to see a bunch of yellow/red alerts because you typically need to [configure DNS records](/dns_config) (if not using a `.nohost.me`/`noho.st`/`ynh.fr` domain), add a swapfile if not enough ram as well as [port forwarding](/isp_box_config) on your home's router.
+**Don't run away** ! The first time you run the diagnosis, it is quite expected to see a bunch of yellow/red alerts because you typically need to [configure DNS records](/install/post_install/dns_config) (if not using a `.nohost.me`/`noho.st`/`ynh.fr` domain), add a swapfile if not enough ram as well as [port forwarding](/install/post_install/isp_box_config) on your home's router.
 :::
 
 :::tip
@@ -110,7 +110,7 @@ Especially, installations on WSL or virtual machines will likely not be reachabl
 
 Once you configured DNS records and port forwarding (if needed), you should be able to install a Let's Encrypt certificate. This will get rid of the spooky security warning from earlier for new visitors.
 
-For more detailed instructions, or to lean more about SSL/TLS certificates, see [the corresponding page here](/certificate).
+For more detailed instructions, or to lean more about SSL/TLS certificates, see [the corresponding page here](/administer/admin_guide/domains/certificate).
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
@@ -127,4 +127,4 @@ For more detailed instructions, or to lean more about SSL/TLS certificates, see 
 
 ## <img src="/img/tada.png" height="30"/> Congratz!
 
-You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/overview). You should also be able to [install your favourite applications](/apps). Don't forget to [plan backups](/backup) !
+You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/category/overview). You should also be able to [install your favourite applications](https://apps.yunohost.org/). Don't forget to [plan backups](/category/backups) !
