Fix pages linting

--- a/docs/02.install/20.install_on/raspberry_pi.mdx
+++ b/docs/02.install/20.install_on/raspberry_pi.mdx
@@ -11,6 +11,7 @@ import Figure from '@site/src/components/Figures';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
+import Link from '@docusaurus/Link';
 
 ## <FAIcon icon="fa-list-alt"/> Pre-requisites
 
@@ -35,7 +36,7 @@ Now that you downloaded the image of YunoHost, you should flash it on a microSD 
 
 <Tabs>
   <TabItem value="etcher" label="With Ether (recommended)">
-    Download <a href="https://www.balena.io/etcher/" target="_blank">Etcher</a> for your operating system and install it.
+    Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
     Plug your SD card, select your image and click "Flash"
 
