--- a/docs/02.install/20.install_on/regular_computer.mdx
+++ b/docs/02.install/20.install_on/regular_computer.mdx
@@ -12,6 +12,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import LinkButton from '@site/src/components/LinkButton';
 import YunoHostImagesList from '@site/src/components/YunoHostImagesList';
+import Link from '@docusaurus/Link';
 
 ## <FAIcon icon="fa-list-alt"/> Pre-requisites
 
@@ -40,7 +41,7 @@ Now that you downloaded the image of YunoHost, you should flash it on a USB stic
 <Tabs>
   <TabItem value="etcher" label="With Ether (recommended)">
 
-    Download <a href="https://www.balena.io/etcher/" target="_blank">Etcher</a> for your operating system and install it.
+    Download <Link to="https://www.balena.io/etcher/" target="_blank">Etcher</Link> for your operating system and install it.
 
     Plug your USB key, select your image and click "Flash"
 
