--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -3,6 +3,8 @@ sidebar_label: Contribute
 title: Contribute to YunoHost
 ---
 
+import Link from '@docusaurus/Link';
+
 ### YunoHost depends exclusively on the participation of people like you.
 
 ---
@@ -25,7 +27,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-  Our support relies on contributors like you. Just come to [the support chatroom](/help) and help new users getting started, or pick a question on the <a href="https://forum.yunohost.org/" target="_blank">Forum</a>.
+  Our support relies on contributors like you. Just come to [the support chatroom](/help) and help new users getting started, or pick a question on the <Link to="https://forum.yunohost.org/" target="_blank">Forum</Link>.
   </Column>
 </Columns>
 
@@ -50,7 +52,7 @@ title: Contribute to YunoHost
 
   <Column className='text--center'>
     Get involved by making YunoHost interfaces available in your language  
-    <a href="https://translate.yunohost.org/" target="_blank">Get started</a>!
+    <Link to="https://translate.yunohost.org/" target="_blank">Get started</Link>!
   </Column>
 </Columns>
 
@@ -62,7 +64,7 @@ title: Contribute to YunoHost
   </Column>
 
   <Column className='text--center'>
-    We need people able to test YunoHost deeply. If you find a bug, try to identify it, and report it on our <a href="https://github.com/YunoHost/issues/issues" target="_blank">bug tracker</a>.
+    We need people able to test YunoHost deeply. If you find a bug, try to identify it, and report it on our <Link to="https://github.com/YunoHost/issues/issues" target="_blank">bug tracker</Link>.
   </Column>
 </Columns>
 
@@ -88,7 +90,7 @@ title: Contribute to YunoHost
 
   <Column className='text--center'>
     You can involve in the YunoHost's development regardless of your skill.
-    Sysadmins, web developers, designers and pythonists <a href="https://github.com/YunoHost" target="_blank">are welcome</a>!  
+    Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
     Learn [how to contribute](/dev), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
 </Columns> 
