--- a/docs/02.install/index.mdx
+++ b/docs/02.install/index.mdx
@@ -1,3 +1,5 @@
+import Link from '@docusaurus/Link';
+
 # Choose your selfhosting method and providers
 
 You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
@@ -76,7 +78,7 @@ export const styleDanger = {
     </tr>
     <tr>
       <td style={styleNone}>Possible ISP limitations</td>
-      <td style={styleDanger}>Yes<br/><small>(see <a href="./providers/isps">here</a>)</small></td>
+      <td style={styleDanger}>Yes<br/><small>(see <Link to="./providers/isps">here</Link>)</small></td>
       <td style={styleGood}>Bypassed by VPN</td>
       <td style={styleGood}>Typically no</td>
     </tr>
