--- a/docs/02.install/40.post_install/15.isp_box_config.mdx
+++ b/docs/02.install/40.post_install/15.isp_box_config.mdx
@@ -36,7 +36,7 @@ In your router admin interface, look for something like 'router configuration' o
 Opening the ports listed below is necessary for the various services available in YunoHost to work. For each of them, the 'TCP' forwarding is needed. Some interfaces refer to 'external' and 'internal' ports: these are the same in our case.
 
 - Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
-- [SSH](/ssh): `22`
+- [SSH](/administer/admin_guide/command_line): `22`
 - [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(clients)</small>, `5269` <small>(servers)</small>
 - [Email](/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
@@ -46,7 +46,7 @@ If you use both a modem and a router, then you need to do the following:
 2. then on the router (the box between the modem and your devices) create rules to forward the above ports to the static IP address for your server.
 
 :::warning
-<FAIcon icon="fa-exclamation-triangle"/> Some internet service providers block port 25 (mail SMTP) by default to fight spam. Some other ISP don't allow to use port 80/443 (web) freely, though it's less likely. Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/isp) for more info.
+<FAIcon icon="fa-exclamation-triangle"/> Some internet service providers block port 25 (mail SMTP) by default to fight spam. Some other ISP don't allow to use port 80/443 (web) freely, though it's less likely. Depending on the ISP, it might be possible to open them in the admin interface... Check [this page](/install/providers/isp) for more info.
 :::
 
 ## Automatic port forwarding / UPnP
