--- a/docs/02.install/index.mdx
+++ b/docs/02.install/index.mdx
@@ -9,7 +9,7 @@ You can host yourself at home (on a small computer), or on a remote server. Each
 You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
 
 - **Pros**: you will have physical control of the machine and only need to buy the hardware;
-- **Cons**: you will have to [manually configure your internet box](/isp_box_config) and [might be limited by your ISP](/isp).
+- **Cons**: you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp).
 
 ## At home, behind a VPN
 
