--- a/docs/03.administer/20.backups/05.evaluate.md
+++ b/docs/03.administer/20.backups/05.evaluate.md
@@ -28,7 +28,7 @@ Example of **a robust and comfortable combination**:
 
 - [generate an archive and download it manually (default method of YunoHost)](/backup#manual-backup)
 - [backup automatically (recommended method)](/backup#automatic-or-remote-backup)
-- [generate an archive directly on another disk](/external_storage)
+- [generate an archive directly on another disk](/administer/tutorials/external_storage)
 - [make a disk image or snapshot](/backup/clone_filesystem)
 - [save useful data via a custom method](/backup/custom_backup_methods)
 
