--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -27,7 +27,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-  Our support relies on contributors like you. Just come to [the support chatroom](/help) and help new users getting started, or pick a question on the <Link to="https://forum.yunohost.org/" target="_blank">Forum</Link>.
+  Our support relies on contributors like you. Just come to [the support chatroom](/community/help) and help new users getting started, or pick a question on the <Link to="https://forum.yunohost.org/" target="_blank">Forum</Link>.
   </Column>
 </Columns>
 
