--- a/docs/03.administer/15.admin_guide/45.email.mdx
+++ b/docs/03.administer/15.admin_guide/45.email.mdx
@@ -42,7 +42,7 @@ If your server becomes unavailable, emails sent to your server will stay in a pe
 
 It is possible that the emails sent from your YunoHost instance are considered as spam by the big email services.
 Is it possible that the IP address from your server have been previously been used to sent spam or that these email services consider your server as a spam sender.
-To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/blacklist_forms).
+To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/administer/troubleshooting/blacklist_forms).
 
 ## Migrating email from an email provider to a YunoHost instance
 
