--- a/docs/02.install/40.post_install/15.isp_box_config.mdx
+++ b/docs/02.install/40.post_install/15.isp_box_config.mdx
@@ -38,7 +38,7 @@ Opening the ports listed below is necessary for the various services available i
 - Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
 - [SSH](/administer/admin_guide/command_line): `22`
 - [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(clients)</small>, `5269` <small>(servers)</small>
-- [Email](/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
+- [Email](/administer/admin_guide/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
 If you use both a modem and a router, then you need to do the following:
 
