fix logo internal url

--- a/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/01.overview/10.what_is_yunohost.mdx
@@ -14,17 +14,17 @@ export function SmallInline({url, alt}) {
   return (<img src={useBaseUrl(url)} width="32" style={{verticalAlign: "middle", margin: "5px"}} alt={alt}/>);
 }
 
-- &#8203;<SmallInline url='image://icon-debian.png' alt="debian logo"/> basé sur Debian, pour une base de confiance et familière;
-- &#8203;<SmallInline url='image://icon-tools.png' alt="tools logo"/> administration via une **interface web simple et claire** ou en ligne de commande;
-- &#8203;<SmallInline url='image://icon-package.png' alt="package logo"/> déployez des **applications en quelques clics**, parmi [un catalogue de plus de 500](https://apps.yunohost.org) !;
-- &#8203;<SmallInline url='image://icon-users.png' alt="users logo"/> ajoutez des **utilisateurs** <small>(gérés via un annuaire LDAP)</small>;
-- &#8203;<SmallInline url='image://icon-globe.png' alt="globe logo"/> gérez des **noms de domaine**;
-- &#8203;<SmallInline url='image://icon-medic.png' alt="medic logo"/> créez et restaurez des **sauvegardes**;
-- &#8203;<SmallInline url='image://icon-door.png' alt="door logo"/> connexion simultanée à toutes les apps via un **portail utilisateur** <small>(nginx, SSOwat)</small>;
-- &#8203;<SmallInline url='image://icon-mail.png' alt="mail logo"/> fourni avec un **serveur mail complet** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
-  &#8203;<SmallInline url='image://icon-messaging.png' alt="messaging logo"/> ...ainsi qu’un **serveur de messagerie instantanée** <small>(XMPP)</small>;
-- &#8203;<SmallInline url='image://icon-lock.png' alt="lock logo"/> gère les **certificats SSL** <small>(basé sur Let's Encrypt)</small>;
-- &#8203;<SmallInline url='image://icon-shield.png' alt="shield logo"/> ... et des **systèmes de sécurité** <small>(`fail2ban`, `yunohost-firewall`)</small>.
+- &#8203;<SmallInline url='/img/icon-debian.png' alt="debian logo"/> basé sur Debian, pour une base de confiance et familière;
+- &#8203;<SmallInline url='/img/icon-tools.png' alt="tools logo"/> administration via une **interface web simple et claire** ou en ligne de commande;
+- &#8203;<SmallInline url='/img/icon-package.png' alt="package logo"/> déployez des **applications en quelques clics**, parmi [un catalogue de plus de 500](https://apps.yunohost.org) !;
+- &#8203;<SmallInline url='/img/icon-users.png' alt="users logo"/> ajoutez des **utilisateurs** <small>(gérés via un annuaire LDAP)</small>;
+- &#8203;<SmallInline url='/img/icon-globe.png' alt="globe logo"/> gérez des **noms de domaine**;
+- &#8203;<SmallInline url='/img/icon-medic.png' alt="medic logo"/> créez et restaurez des **sauvegardes**;
+- &#8203;<SmallInline url='/img/icon-door.png' alt="door logo"/> connexion simultanée à toutes les apps via un **portail utilisateur** <small>(nginx, SSOwat)</small>;
+- &#8203;<SmallInline url='/img/icon-mail.png' alt="mail logo"/> fourni avec un **serveur mail complet** <small>(Postfix, Dovecot, Rspamd, DKIM)</small>;
+  &#8203;<SmallInline url='/img/icon-messaging.png' alt="messaging logo"/> ...ainsi qu’un **serveur de messagerie instantanée** <small>(XMPP)</small>;
+- &#8203;<SmallInline url='/img/icon-lock.png' alt="lock logo"/> gère les **certificats SSL** <small>(basé sur Let's Encrypt)</small>;
+- &#8203;<SmallInline url='/img/icon-shield.png' alt="shield logo"/> ... et des **systèmes de sécurité** <small>(`fail2ban`, `yunohost-firewall`)</small>.
 
 ## Origine
 
